styles/style.css
*,
*::after,
*::before {
   box-sizing: border-box; 
}

* {
    padding: 0;
    margin: 0;
}

body{
    background: url(images/sunset-7133867_1280.jpg)no-repeat;
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100dvh;
}

h1 {
    text-align: center;
    margin-bottom: 30px;
    color: #60ed08;
    font-size: clamp(2rem, 10vw, 3rem);
    text-shadow: 3px 2px 4px, -3px -2px 4px;
    font-style: italic;
}

h1::first-letter {
    font-size: 1.5em;
    color: rgb(0, 255, 242);
    font-style: italic;
}

.login-page {
    backdrop-filter: blur(5px);
    border: solid rgb(184, 240, 247);
    border-radius: 40px;
    padding: 20px;
    background: transparent;
}

.user-form .div-name,
.user-form .div-password {
    text-align: center;
    border: solid #fff;
    border-radius: 15px;
    background-color: aliceblue;
    margin-bottom: 30px;
    font-size: clamp(1.3rem, 10vh, 1.5rem);
}

.user-form input {
    border: solid;
    padding: 5px;
    border-radius: 10px;
}

.user-form .div-forget-password {
    color: rgb(237, 42, 42);
    text-align: start;
    margin-bottom: 30px;
}

.user-form p{
    font-size: clamp(1.2rem, 10vw, 1.5rem);
    font-weight: bold;
}

.user-form a {
    padding: clamp(5px, 2vw, 10px);
    font-size: 1;
    text-decoration: none;
    margin-left: 50px;
    border: solid #000;
    border-radius: 20px;
    color: #fff;
}

.user-form .create-account {
    padding: 20px;
    color: #fff;
}

.user-form .button-login {
    width: 100%;
    height: 50px;
    margin-bottom: 15px;
    border: none;
    border-radius: 40px;
    cursor: pointer;
    font-weight: bold;
    font-size: 1.5rem;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-style: italic;
}

.user-form .button-login:hover {
    background-color: #b5bdc5;
}

.user-form .button-login:active {
    background-color: #b3b5b7;   
}

.user-form a:hover {
    text-decoration: underline;
}

@media (max-width: 1536px) {
    .login-page {
        max-width: 1280px;
    }
}

@media (max-width: 1280px) {
    .login-page {
        max-width: 1040px;
    }
}

@media (max-width: 1024px) {
    .login-page {
        max-width: 1024px;
    }
}

@media (max-width: 768px) {
    .login-page {
        max-width: 640px;
    }
}

@media (max-width: 640px) {
    .login-page {
        max-width: 475px;
    }

    .login-page .user-form a{
        display: block;
        margin: auto;
        width: fit-content;
    }

    .login-page .user-form p {
        text-align: center;
    }
}

@media (max-width: 475px) {
    .login-page {
        max-width: 100%;
    }

    .login-page .user-form .div-name input,
    .login-page .user-form .div-password input {
        display: block;
        margin: auto;
    }
}

